@@ -53,6 +53,7 @@ requires.append(get_require_version('trytond'))
 
 tests_require = [get_require_version('proteus'),
     get_require_version('trytond_account_statement'),
+    get_require_version('trytond_account_statement_rule'),
     'python-dateutil']
 dependency_links = []
 if minor_version % 2:
