@@ -5,6 +5,7 @@ depends:
     ir
 extras_depend:
     account_statement
+    account_statement_rule
 xml:
     payment.xml
     statement.xml
